spacing issues fixed

--- a/src/components/ProfilePage/styles.css
+++ b/src/components/ProfilePage/styles.css
@@ -6,8 +6,7 @@ html, body   {
 .profilePage {
     display: flex;
     flex-direction: column;
-    overflow: hidden;
-    height: 100%
+    height: 100vh;
 }
 
 .userInfo {
@@ -36,6 +35,8 @@ html, body   {
     display: flex;
     flex-direction: column;
     margin-bottom: 3rem;
+    min-height: 520px;
+    height: 75%
 }
 .likedPosts {
     flex-grow:1;
@@ -104,7 +105,6 @@ html, body   {
 }
 
 .preview {
-    width: 100%;
     min-height: 1rem;
 }
 
